# GreeeniPlanner

./: BUILDING.md  README.html  README.md  main.js  package.json
.github/workflows/: build.yml
app/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html
